syntax = "proto3";


package users_v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";



option go_package = "github.com/ruslanjo/go-auth-micro/pkg/users/v1;users_v1";


service UsersV1 {
    rpc Create(CreateRequest) returns (CreateResponse);
    rpc Get(GetRequest) returns (GetResponse);
    rpc List(ListRequest) returns (ListResponse);
    rpc Update(UpdateRequest) returns (google.protobuf.Empty);
    rpc Delete(DeleteRequest) returns (google.protobuf.Empty);
}


message PublicUserInfo {
    string login = 1;
    string country = 2;
}

message UserInfo {
    PublicUserInfo public_info = 1;
    string password = 2;
}

message User {
    int64 id = 1;
    PublicUserInfo info = 2;
    google.protobuf.Timestamp created_at = 3;
    google.protobuf.Timestamp updated_at = 4;
}


message UpdateUserInfo {
    google.protobuf.StringValue password = 1;
    google.protobuf.StringValue country = 2;
}

message CreateRequest {
    UserInfo info = 1;
}

message CreateResponse {
    int64 id = 1;
}

message GetRequest {
    int64 id = 1;
}

message GetResponse {
    User user = 1;
}

message ListRequest {
    int64 offset = 1;
    int64 limit = 2;
}

message ListResponse {
    repeated User users = 1;
}

message UpdateRequest {
    int64 id = 1;
    UpdateUserInfo info = 2;
}

message DeleteRequest {
    int64 id = 1;
}
